--- a/flume/flume.conf
+++ b/flume/flume.conf
@@ -11,6 +11,7 @@ sandbox.sources.eventlog.basenameHeader = true
 
 # HDFS sinks
 sandbox.sinks.sink_to_hdfs.type = hdfs
+sandbox.sinks.sink_to_hdfs.hdfs.proxyUser = admin
 sandbox.sinks.sink_to_hdfs.hdfs.fileType = DataStream
 sandbox.sinks.sink_to_hdfs.hdfs.path = /user/admin/data_pipeline_demo/data/input
 sandbox.sinks.sink_to_hdfs.hdfs.filePrefix = %{basename}
