--- a/flume/flume.conf
+++ b/flume/flume.conf
@@ -11,9 +11,9 @@ sandbox.sources.eventlog.basenameHeader = true
 
 # HDFS sinks
 sandbox.sinks.sink_to_hdfs.type = hdfs
-sandbox.sinks.sink_to_hdfs.hdfs.proxyUser = admin
+sandbox.sinks.sink_to_hdfs.hdfs.proxyUser = DATA_PIPELINE_DEMO_USER
 sandbox.sinks.sink_to_hdfs.hdfs.fileType = DataStream
-sandbox.sinks.sink_to_hdfs.hdfs.path = /user/admin/data_pipeline_demo/data/input
+sandbox.sinks.sink_to_hdfs.hdfs.path = /user/DATA_PIPELINE_DEMO_USER/data_pipeline_demo/data/input
 sandbox.sinks.sink_to_hdfs.hdfs.filePrefix = %{basename}
 sandbox.sinks.sink_to_hdfs.hdfs.fileSuffix = .input
 sandbox.sinks.sink_to_hdfs.hdfs.inUseSuffix = .intransit
